--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,16 +1,55 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<view class="main">
+
+  <!-- 公共头部 -->
+  <MyTitle></MyTitle>
+
+  <!-- 首页导航 -->
+  <view class="nav_wrap">
+    <!-- 自己滚动区域组件 -->
+    <scroll-view class="nav" scroll-x>
+      <view bindtap="activeNav" data-index="{{index}}" 
+      class="nav_item {{index===currentIndexNav?'active':''}}" wx:for="{{navList}}" wx:key="index">
+       {{item.text}}
+      </view>
+      </scroll-view>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+
+  <!-- 轮播图结构 -->
+  <view class="slides">
+    <swiper autoplay indicator-dots circular>
+      <swiper-item wx:for="{{swiperList}}" wx:key="index">
+        <navigator>
+          <image mode="widthFix" src="{{item.imgSrc}}"></image>
+        </navigator>
+      </swiper-item>
+    </swiper>
   </view>
-  <view class="voice">
-    <button > 听录音 </button>
+
+  <!-- 视频列表 -->
+  <view class="video_wrap">
+    <navigator class="video_item" xw:for="{{videosList}}" wx:key="index">
+      <!-- 1. 图片容器 -->
+      <view class="video_img">
+        <!-- 1.1 图片 -->
+        <image src="{{item.imgSrc}}"></image>
+        <!-- 1.2 播放量 -->
+        <view class="video_info">
+          <!-- 图标 -->
+          <text class="fa fa-play-circle-o"></text>
+          <!-- 数值 -->
+          <text class="play_count">{{item.playCount}}</text>
+        </view>
+        <!-- 1.3 评论量 -->
+        <view class="comment_count_row">
+          <!-- 图标 -->
+          <text class="fa fa-commenting-o"></text>
+          <!-- 数值 -->
+          <text class="comment_count">{{item.commentCount}}</text>
+        </view>
+      </view>
+      <!-- 2. 标题 -->
+      <view class="video_title">{{item.desc}}</view>
+    </navigator>
   </view>
+
 </view>
