--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,71 @@
-/**index.wxss**/
-.userinfo {
+.page{
+  color: #666;
+}
+/* 首页导航 */
+/* .nav_wrap{} */
+.nav{
+  white-space: nowrap;
+  padding: 5rpx 0;
+}
+.nav_item{
+  padding: 20rpx 45rpx;
+  font-size: 30rpx;
+  display: inline-block;
+}
+.nav_item.active{
+  border-bottom: 5rpx solid #de688b;
+}
+
+/*  轮播图 */
+.slides{
+  margin-top: 10rpx;
+}
+.slides swiper{
+  height: 220rpx;
+}
+.slides navigator{
+  width: 100%;
+  height: 100%;
+}
+.slides image{
+  width: 100%;
+  height: 100%;
+}
+
+/*  视频列表  */
+.video_wrap{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  padding: 5rpx;
+  justify-content: space-betweenssss;
 }
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.video_item{
+  width: 48%;
+  margin-bottom: 20rpx;
 }
-
-.userinfo-nickname {
-  color: #aaa;
+.video_img{
+  position: relative;
 }
-
-.usermotto {
-  margin-top: 200px;
+.video_img image{
+  width: 100%;
+}
+.video.img .video_info{
+  position: absolute;
+  bottom: 10rpx;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  color: #fff;
+  font-size: 24rpx;
+}
+.video_title{
+  font-size: 28rpx;
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  line-clamp: 2;
+  box-orient: vertical;
 }
